--- a/src/pages/List/style.sass
+++ b/src/pages/List/style.sass
@@ -1,3 +1,5 @@
+@import 'src/assets/styles/_variables.sass'
+
 .list
   width: 100%
   height: 100%
@@ -12,8 +14,28 @@
     margin: 20px 0
     li
       list-style: none
-      margin: 0 10px
-      padding: 10px
-      border: 1px solid
+      margin: 0 5px
+      width: 30px
+      height: 30px
       border-radius: 50%
       font-size: 0.9rem
+      cursor: pointer
+      a
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 100%
+        height: 100%
+        outline: none
+      &.active
+        background-color: $blue
+        color: $white
+      &.disabled
+        pointer-events: none
+        opacity: .3
+  .error
+    display: flex
+    justify-content: center
+    align-items: center
+    font-size: 1.6rem
+    height: 100%
